[package]
name = "crypto-timestamp-api"
version = "0.1.0"
authors = ["Nicolas Marshall <marshall.nicolas@gmail.com>"]
edition = "2018"

[dependencies]
tokio = { version = "0.2", features = ["macros"] }
warp = { version = "0.2.5" }
serde = "1.0.106"
serde_derive = "1.0.106"
serde_json = { version = "=1.0.51" }

# db, models
diesel = { version = "1.4.2", features = ["postgres", "uuidv07", "r2d2", "chrono"] }
r2d2 = "0.8.5"
postgres = "0.15.1"
chrono = { version = "0.4.6", features = ["serde"] }

# config, errors, logs
lazy_static = "1.3.0"
anyhow = "1.0.27"
thiserror = "1.0.14"
config = "0.10.1"
log = "0.4.1"
pretty_env_logger = "0.3"

# crypto, encoding
ed25519-dalek = { version = "1.0.1", features = ["nightly", "serde"] }
blake3 = "0.3.7"
base64 = "0.12.0"
rand = "0.7.3"
cuckoo = {git="https://github.com/CodeChain-io/rust-cuckoo",rev="e08176f"}
byteorder = "1.3.4"
# itertools = "0.9.0"

# musl
openssl = "0.10.26"


